REGRESSION (IFC selections): Overlapping selection rectangles when selecting preformatted text https://bugs.webkit.org/show_bug.cgi?id=231291 <rdar://problem/83939949>

Reviewed by Alan Bujtas.

Source/WebCore:

We are painting selections for soft linebreaks.

Test: editing/selection/soft-line-break-no-paint.html

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::paint):

Like legacy, don't paint any linebreak boxes.

LayoutTests:

* editing/selection/soft-line-break-no-paint-expected.html: Added.
* editing/selection/soft-line-break-no-paint.html: Added.


Canonical link: https://commits.webkit.org/242635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283709 268f45cc-cd09-0410-ab3c-d52691b4dbfc